# amazon-bedrock-agentcore-samples

03-integrations/01-agentic-frameworks/04-crewai/ai_research_crew/: .gitignore  Dockerfile  README.md  pyproject.toml
03-integrations/01-agentic-frameworks/04-crewai/ai_research_crew/src/ai_research_crew/: crew.py  main.py
03-integrations/01-agentic-frameworks/04-crewai/ai_research_crew/src/ai_research_crew/config/: agents.yaml
