[project]
name = "ai_research_crew"
version = "0.1.0"
description = "ai_research_crew using crewAI"
authors = [{ name = "Abhijeet Patil", email = "" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0",
    "bedrock-agentcore",
    "bedrock-agentcore-starter-toolkit",
    "aws-opentelemetry-distro>=0.10.0",
    "boto3>=1.34.0"
]

[project.scripts]
ai_research_crew = "ai_research_crew.main:run"
run_crew = "ai_research_crew.main:run"
train = "ai_research_crew.main:train"
replay = "ai_research_crew.main:replay"
test = "ai_research_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
